WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
24770
Geolocation Coordinates do not return null when they should
https://bugs.webkit.org/show_bug.cgi?id=24770
Summary
Geolocation Coordinates do not return null when they should
Greg Bolsinga
Reported
2009-03-23 19:33:26 PDT
See:
http://dev.w3.org/geo/api/spec-source.html#coordinates
The current implementation returns 0 or -1.
Attachments
patch channeled by Sam
(12.94 KB, patch)
2009-04-12 19:45 PDT
,
Greg Bolsinga
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Greg Bolsinga
Comment 1
2009-03-23 19:33:52 PDT
<
rdar://problem/6713745
>
Greg Bolsinga
Comment 2
2009-04-12 19:45:20 PDT
Created
attachment 29426
[details]
patch channeled by Sam This is from the beginnings of a patch from Sam. I've added it to support the 4 Coordinates properties that are null if they cannot be provided.
Darin Adler
Comment 3
2009-04-13 07:46:07 PDT
Comment on
attachment 29426
[details]
patch channeled by Sam Seems to me that since these are doubles we could have used NaN instead of separate booleans to initialize the Coordinates object. r=me
Greg Bolsinga
Comment 4
2009-04-13 10:07:54 PDT
bolsinga:WebKit bolsinga$ svn commit Sending WebCore/ChangeLog Sending WebCore/GNUmakefile.am Sending WebCore/WebCore.pro Sending WebCore/WebCore.scons Sending WebCore/WebCore.vcproj/WebCore.vcproj Sending WebCore/WebCore.xcodeproj/project.pbxproj Sending WebCore/WebCoreSources.bkl Adding WebCore/bindings/js/JSCoordinatesCustom.cpp Sending WebCore/page/Coordinates.h Sending WebCore/page/Coordinates.idl Sending WebCore/platform/mac/GeolocationServiceMac.mm Transmitting file data ........... Committed revision 42437.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug